# congruence-closure

./: congruence-closure.cabal
presentation/: .latexmkrc  figure1.trace  figure2.trace  figure3.trace  minted.sty  outline.tex  presentation.tex
src/Logic/: CongruenceClosure.hs  Internal.hs
