name:                congruence-closure
version:             0.1.0.0
synopsis:            Computes the congruence closure of equations of uninterpreted function symbols
description:         The congruence closure computes the satifiability of
                     equations of uninterpreted function symbols
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@googlemail.com
category:            Logic
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Logic.CongruenceClosure
  other-modules:       Logic.Internal
  build-depends:       base >=4.5 && <4.8,
                       containers,
                       union-find >=0.2 && <0.3,
                       fgl >=5.5 && <5.6,
                       mtl >= 2.0,
                       PropLogic >= 0.9.0.4,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
